--- a/script/components/Grid/Grid.scss
+++ b/script/components/Grid/Grid.scss
@@ -3,6 +3,9 @@
 .grid-container {
   @include basicReset;
 
+  display: flex;
+  flex-wrap: wrap;
+
   margin-left: auto;
   margin-right: auto;
   max-width: $grid-container-max-width;
