--- a/script/components/manifest.scss
+++ b/script/components/manifest.scss
@@ -1,18 +1,28 @@
 @import url('https://fonts.googleapis.com/css?family=Hind');
 
-@mixin basicReset {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
 $color-accent: #96A492;
 $color-accent-contrast: #fff;
 
 $font-base: 'Hind', sans-serif;
+$font-small: 1.25rem;
+$font-medium: 1.35rem;
+$font-large: 1.5rem;
 
 $grid-container-max-width: 60rem;
 $grid-column-gutter: 1.5rem;
+
+strong { text-decoration: underline; }
+
+@mixin basicReset {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  appearance: none;
+  outline: none;
+  border: none;
+  font-size: $font-medium;
+  font-family: $font-base;
+}
 
 body, #root {
   @include basicReset;
