--- a/script/components/manifest.scss
+++ b/script/components/manifest.scss
@@ -8,8 +8,9 @@ $font-small: 1.25rem;
 $font-medium: 1.35rem;
 $font-large: 1.5rem;
 
-$grid-container-max-width: 60rem;
+$grid-container-max-width: 40rem;
 $grid-column-gutter: 1.5rem;
+$grid-row: 1.5rem;
 
 strong { text-decoration: underline; }
 
