--- a/script/components/Grid/Grid.scss
+++ b/script/components/Grid/Grid.scss
@@ -7,6 +7,7 @@
 
   display: flex;
   flex-wrap: wrap;
+  flex-direction: column;
 
   margin-left: auto;
   margin-right: auto;
@@ -15,4 +16,8 @@
   padding-right: $grid-column-gutter;
 
   font-family: $font-base;
+}
+
+.grid-col {
+  margin-bottom: $grid-row;
 }
